--- a/.env
+++ b/.env
@@ -30,3 +30,9 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/symfony_facr?serverVersion=5.7"
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=4a1c4489248080ded20c736bf7eb38cf
+###< lexik/jwt-authentication-bundle ###
