--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -56,3 +56,4 @@ security:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/users, roles: IS_AUTHENTICATED_FULLY, methods: [GET, PUT, DELETE, PATCH] }
         - { path: ^/api/testimonials, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/random-user, roles: IS_AUTHENTICATED_FULLY }
