--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,7 +1,12 @@
 api_platform:
     mapping:
-        paths: ['%kernel.project_dir%/src/Entity']
+        paths: ['%kernel.project_dir%/src/ApiResources']
     patch_formats:
         json: ['application/merge-patch+json']
+    show_webby: false
+    title: 'CAR Rental'
+    description: 'FACR Laravel project API gateway'
+    version: '1.0.0'
     swagger:
         versions: [3]
+    name_converter: 'Symfony\Component\Serializer\NameConverter\CamelCaseToSnakeCaseNameConverter'
