--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,3 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
-api_login_check:
-    path: /api/login_check
+swagger_ui:
+    path: /
+    controller: api_platform.swagger.action.ui
