--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,9 @@
 parameters:
     client: '%env(CLIENT_NAME)%'
 
+imports:
+    - { resource: settings/ }
+
 services:
     # default configuration for services in *this* file
     _defaults:
