--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,8 @@
         }
     },
     "require-dev": {
+        "symfony/browser-kit": "5.4.*",
+        "symfony/css-selector": "5.4.*",
         "symfony/maker-bundle": "^1.43",
         "symfony/stopwatch": "5.4.*"
     }
