--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
         "elasticsearch/elasticsearch": "^7.10",
+        "fakerphp/faker": "^1.20",
         "friendsofphp/php-cs-fixer": "^3.9",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.6",
         "phpunit/phpunit": "^9.5",
+        "snc/redis-bundle": "^4.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
