--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,6 +27,8 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
+    Redis: '@snc_redis.default'
+
     'Symfony\Component\Serializer\NameConverter\CamelCaseToSnakeCaseNameConverter': ~
 
     App\Services\ElasticSearch:
