--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.6",
         "phpunit/phpunit": "^9.5",
+        "ramsey/uuid": "^4.2",
         "snc/redis-bundle": "^4.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.4.*",
@@ -28,6 +29,7 @@
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
         "symfony/http-client": "5.4.*",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/phpunit-bridge": "^6.1",
         "symfony/property-access": "5.4.*",
         "symfony/property-info": "5.4.*",
