--- a/.env
+++ b/.env
@@ -36,3 +36,8 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 # passwords that contain special characters (@, %, :, +) must be urlencoded
 REDIS_URL=redis://localhost
 ###< snc/redis-bundle ###
+
+###> versionning ###
+MAJOR_VERSION='v0'
+MINOR_VERSION='v0.0.1'
+###< versionning ###
