--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,6 +16,8 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
             $logger: '@monolog.logger.api_log_channel'
+            $apiMajorVersion: '%api_major_version%'
+            $apiMinorVersion: '%api_minor_version%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
