mvp postgresql - /pg-actors

--- a/.env
+++ b/.env
@@ -36,3 +36,5 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 # passwords that contain special characters (@, %, :, +) must be urlencoded
 REDIS_URL=redis://localhost
 ###< snc/redis-bundle ###
+
+DATABASE_URL="pgsql://postgres:admin@127.0.0.1:5432/dvd_rental"
